fixed broken css

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -68,9 +68,9 @@ $body-color:					$black;
 $dt-font-weight:				$font-weight-bold;
 $label-margin-bottom:			16px;
 $link-color:					$orange;
-$link-decoration:				underlined;
+$link-decoration:				underline;
 $link-hover-color:				$lime;
-$link-hover-decoration:			underlined;
+$link-hover-decoration:			underline;
 $paragraph-margin-bottom:		16px;
 $table-caption-color:			$yellow;
 $table-cell-padding:			20px;
